<resources>

    <string name="app_name">uGood</string>
    <string name="back">Back</string>
    <string name="body_icon">body</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="errorMessageINVALIDEMAILORPASSWORD">Invalid Email</string>
    <string name="errorMessageNEEDTOFILL">Please do not leave text field empty</string>
    <string name="errorMessagePASSNEEDTOMATCH">Passwords need to match</string>
    <string name="errorMessageUSERDOESNOTEXIST">User does not exist</string>
    <string name="errorMessageUSEREXISTS">User Exists</string>
    <string name="errorMessageWEAKPASSWORD">Weak password</string>
    <string name="example">Example Text</string>
    <string name="forgotPass">Forgot your password? Click here</string>
    <string name="forgotMessage">Please enter your email to have your password reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">home</string>
    <string name="logSuccess">logged in Successfully</string>
    <string name="login">Log in</string>
    <string name="mind_icon">mind</string>
    <string name="password">Password</string>
    <string name="regSuccess">Registered Successfully</string>
    <string name="sendPassReset">Reset Password</string>
    <string name="signup">Don\'t have an account? Sign up here</string>
    <string name="spirit_icon">spirit</string>
    <string name="username">Username</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="settings">settings</string>
    <string name="completedDays">Calender days</string>
    <string name="longestStreak">Longest Streak</string>
    <string name="totalDays">Total Days</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_calendar_item">calendar_item</string>
    <string name="changeUsername">Change Username</string>
    <string name="changePicture">Change Picture</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="graph">Graph</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="explore">Explore</string>
    <string name="check_in">Check In</string>
    <string name="activities">Activities</string>
    <string name="CalendarInfo">Tap on day to see its detail</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>

</resources>
