<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.Fragments.GraphFragment">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/graph"
            android:textSize="30sp"/>

    </RelativeLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title_bar"/>

    <ImageButton
        android:id="@+id/left_button"
        android:contentDescription="@null"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_chevron_left_black_24dp"
        android:layout_below="@id/graph"/>

    <ImageButton
        android:id="@+id/right_button"
        android:contentDescription="@null"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_chevron_right_black_24dp"
        android:layout_below="@id/graph"/>

    <TextView
        android:id="@+id/week_month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/week"
        android:textSize="35sp"
        android:layout_alignTop="@id/left_button"/>

    <Button
        android:id="@+id/week_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/week"
        android:layout_below="@id/week_month_year"/>

    <Button
        android:id="@+id/month_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="@string/month"
        android:layout_below="@id/week_month_year"/>

    <Button
        android:id="@+id/year_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/year"
        android:layout_below="@id/week_month_year"/>

</RelativeLayout>